# py-air-control-exporter

./: .envrc  .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  flake.nix  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py
.github/workflows/: build.yml
philips_air_purifier_exporter/: app.py  comms.py  metrics.py  prometheus.py  status.py
py_air_control_exporter/: app.py  fetcher_registry.py  fetchers_api.py  logging.py  main.py  metrics.py  prometheus.py  py_air_fetcher.py  readings_source.py
py_air_control_exporter/fetchers/: api.py  coap_philips.py  fetcher_registry.py  http_philips.py
test/: conftest.py  status_responses.py  test_app.py  test_http_philips.py  test_main.py  test_metrics.py  test_prometheus.py  test_py_air_fetcher.py  test_readings_source.py  test_status.py
test/data/: simple_config.yaml
test/fetchers/: test_coap_philips.py  test_http_philips.py
tests/: test_metrics.py  test_prometheus.py
